syntax = "proto3";

import "google/protobuf/empty.proto";

package token;

service RpcNetworkService {
  rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse) {}

  rpc GetNetwork(GetNetworkRequest) returns (GetNetworkResponse) {}
}

message Network {
  optional string name = 1;
}

message ListNetworksRequest {
  optional int32 page = 1;
  optional int32 page_size = 2;
}

message ListNetworksResponse {
  repeated Network networks = 1;
}

message GetNetworkRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message GetNetworkResponse {
  // The field will contain name of the resource requested.
  optional string name = 1;
}

